objects/IndividualElite__c.object
<CustomObject><fields>
        <fullName>DOB__c</fullName>
        <description>生日 - Date of birth</description>
        <label>生日</label>
        <type>Date</type>
    </fields><fields>
        <fullName>Gender__c</fullName>
        <description>性别  - Gender</description>
        <label>性别</label>
        <picklist>
            <picklistValues>
                <fullName>女</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>男</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>age__c</fullName>
        <formula>YEAR(TODAY()) - YEAR( DOB__c ) +  IF( MONTH(TODAY())&gt;MONTH( DOB__c) , 0, -1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>年龄</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><allowInChatterGroups>true</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><description>精英 个人</description><enableActivities>true</enableActivities><enableBulkApi>true</enableBulkApi><enableFeeds>false</enableFeeds><enableHistory>true</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><label>精英</label><nameField>
        <label>姓名</label>
        <type>Text</type>
    </nameField><pluralLabel>精英</pluralLabel><sharingModel>ReadWrite</sharingModel><listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews></CustomObject>